--- a/Public/css/signUp.css
+++ b/Public/css/signUp.css
@@ -39,11 +39,12 @@
     }
 }
 
-.signup a {
+.signUp a {
     color: #FF7E56;
     text-decoration: none;
     transition: all 0.3s ease;
 }
+
 
 @media screen and (max-width: 450px) {
     .main {
