--- a/views/Auth/signUp.ejs
+++ b/views/Auth/signUp.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/login.css" />
+    
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -17,6 +17,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/base.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="/css/signUp.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/login.css" />
 </head>
 
 <body>
@@ -74,9 +75,8 @@
                     </div>
                     <button type="submit" class="submit-button">Sign Up</button>
                 </form>
-                <div class="signup">
+                <div class="signUp">
                     <p>Don't have an account? <a href="/login">Login</a></p>
-
                 </div>
             </div>
         </div>
