--- a/Public/css/base.css
+++ b/Public/css/base.css
@@ -279,3 +279,21 @@ footer {
     }
 
 }
+
+
+@media screen and (max-width: 650px) {
+    .footer{
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+    }
+
+    .footer-left{
+        width: 100%;
+    }
+
+    .footer-right{
+        width: 100%;
+        align-items: flex-start;
+    }
+}
