--- a/Public/css/home.css
+++ b/Public/css/home.css
@@ -17,9 +17,24 @@
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
     align-items: flex-start;
     gap: 2rem;
     margin-bottom: 50px;
+}
+
+
+
+.product {
+    width: 20%;
+    min-width: 300px;
+    max-width: 100%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
 .product a {
@@ -27,20 +42,7 @@
     width: 100%;
 }
 
-
-.product {
-    min-width: 230px;
-    width: 23%;
-    height: 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-
-}
-
-.fav{
+.fav {
     width: 100%;
     height: 100%;
     background-color: #F7F7F7;
@@ -48,20 +50,20 @@
     justify-content: flex-end;
 }
 
-.fav>i{
+.fav>i {
     font-size: 1rem;
     color: #000000;
     padding: 0.5rem;
     cursor: pointer;
 }
 
-.fav-red{
+.fav-red {
     color: red !important;
 }
 
 .product-img {
     width: 100%;
-    height: 300px;
+    aspect-ratio: 1/1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -70,7 +72,8 @@
 
 .product img {
     width: 50%;
-    height: 50%;
+    aspect-ratio: 1/1;
+    object-fit: contain;
     mix-blend-mode: multiply;
 }
 
@@ -145,79 +148,6 @@
     color: #5b5b5b;
 }
 
-
-
-@media screen and (max-width: 350px) {
-    .top-right {
-        width: 100%;
-    }
-}
-
-
-@media screen and (max-width: 550px) {
-    .top {
-        flex-direction: column-reverse;
-        height: 70%;
-    }
-
-    .top-left {
-        width: 100%;
-        height: 100%;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 30px;
-    }
-
-    .top-left h1 {
-        text-align: center;
-    }
-
-    .top-left h2 {
-        text-align: center;
-    }
-
-    .top-right {
-        width: 100%;
-        height: 100%;
-        margin: 0 auto;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .products a {
-        width: 100%;
-        height: 100%;
-    }
-
-    .product-details {
-        padding: 2rem 0.5rem;
-    }
-
-    .product-name-price {
-        gap: 1rem;
-    }
-}
-
-@media only screen and (min-width: 550px) and (max-width: 750px) {
-
-    .top-right {
-        width: 40%;
-    }
-
-    .top-left h1 {
-        font-size: 1.5rem;
-    }
-
-    .top-left h2 {
-        font-size: 1rem;
-    }
-
-}
-
 form {
     width: 30%;
     height: 15px;
@@ -250,10 +180,6 @@ form>select {
     outline: none;
 }
 
-
-
-
-
 .cart-btn>img {
     width: 100%;
     height: 100%;
@@ -262,10 +188,34 @@ form>select {
 }
 
 
+@media screen and (max-width: 800px) {
+    .top {
+        height: 500px;
+        background-image: url(/images/top-300.avif);
+        background-repeat: no-repeat;
+        background-size: cover
+    }
 
-@media screen and (max-width: 750px) {
-    .top-right img {
-        width: 80%;
-        height: 80%;
+    .top>img {
+        display: none;
     }
 }
+
+
+@media screen and (max-width: 550px) {
+
+    .products a {
+        width: 100%;
+        height: 100%;
+    }
+
+    .product-details {
+        padding: 2rem 0.5rem;
+    }
+
+    .product-name-price {
+        gap: 1rem;
+    }
+}
+
+@media only screen and (min-width: 550px) and (max-width: 750px) {}
