--- a/Public/css/show.css
+++ b/Public/css/show.css
@@ -1,17 +1,18 @@
 .product {
     width: 90%;
-    height: 90vh;
+    min-height: 80vh;
     display: flex;
     justify-content: center;
-    align-items: center;
     margin: 0 auto;
+    margin-top: 7rem;
+    margin-bottom: 3rem;
     gap: 3rem;
     color: #2D2D2D !important;
 }
 
 .left {
     width: 40%;
-    height: 70%;
+    max-height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,16 +21,19 @@
 }
 
 .left-image {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 2rem;
 }
 
 .left-image img {
-    width: 50%;
-    height: 50%;
-    /* object-fit: cover; */
+    width: 70%;
+    aspect-ratio: 1/1;
     mix-blend-mode: multiply;
+    object-fit: contain;
 }
 
 .right {
@@ -96,15 +100,14 @@
 .rating {
     display: flex;
     justify-content: flex-start;
-    align-items: center;
     margin-top: 1.5rem;
+    gap: 0.5rem;
 }
 
 
 .no-rating {
-    margin-left: 10px;
-    margin-top: 20px;
     height: 100%;
+    margin-top: 0.5rem;
 }
 
 .right-price {
@@ -195,14 +198,20 @@
     width: 100%;
     height: 20%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
     margin-top: 1.5rem;
     gap: 2rem;
 }
 
+.buy-cart:nth-child(){
+    flex-basis: 50%;
+}
+
 .fav-form {
     width: 20%;
+    min-width: 150px;
     min-height: 40px;
     display: flex;
     justify-content: center;
@@ -226,6 +235,7 @@
 
 .add-to-cart {
     width: 20%;
+    min-width: 150px;
     min-height: 40px;
     display: flex;
     justify-content: center;
@@ -284,4 +294,49 @@
     border: none;
     outline: none;
     cursor: pointer;
+}
+
+@media screen and (max-width: 350px) {
+    .left {
+        width: 100%;
+    }
+
+    .right-title{
+        font-size: 1.2rem;
+    }
+    .right-price{
+        font-size: 1.2rem;
+    }
+    .right-description{
+        font-size: 0.8rem;
+    }
+
+    .category-heading{
+        font-size: 1.2rem;
+    }
+
+    .buy-cart{
+        border: 1px solid #94877F;
+        width: 100%;
+    }
+}
+
+
+@media screen and (max-width: 850px) {
+    .product {
+        flex-direction: column;
+        gap: 2rem;
+        margin-top: 7rem;
+        margin-bottom: 2rem;
+    }
+
+    .left {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .right {
+        width: 100%;
+        height: 50%;
+    }
 }
