--- a/Public/css/signUp.css
+++ b/Public/css/signUp.css
@@ -19,18 +19,19 @@
 @media screen and (max-width: 1000px) {
     .main {
         flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
         gap: 10rem;
     }
 
     .main-img {
         width: 100%;
-        height: 50%;
+        height: 20%;
         object-fit: contain
     }
 
     .form-container {
         width: 100%;
-        height: 50%;
         padding: 0 2rem;
     }
 
