--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -54,20 +54,24 @@
                     </div>
                 </div>
                 <div class="rating">
-                    <fieldset class="starability-coinFlip">
-                        <input type="radio" id="first-rate1" name="review[rating]" value="1" checked />
-                        <label for="first-rate1" title="Terrible">1 star</label>
-                        <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-                        <label for="first-rate2" title="Not good">2 stars</label>
-                        <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-                        <label for="first-rate3" title="Average">3 stars</label>
-                        <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-                        <label for="first-rate4" title="Very good">4 stars</label>
-                        <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-                        <label for="first-rate5" title="Amazing">5 stars</label>
-                    </fieldset>
+                    <div>
+                        <fieldset class="starability-coinFlip">
+                            <input type="radio" id="first-rate1" name="review[rating]" value="1" checked />
+                            <label for="first-rate1" title="Terrible">1 star</label>
+                            <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                            <label for="first-rate2" title="Not good">2 stars</label>
+                            <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                            <label for="first-rate3" title="Average">3 stars</label>
+                            <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                            <label for="first-rate4" title="Very good">4 stars</label>
+                            <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                            <label for="first-rate5" title="Amazing">5 stars</label>
+                        </fieldset>
+                    </div>
 
-                    <div class="no-rating">(121)</div>
+                    <div class="no-rating">
+                    <%= product.rating.count %>
+                    </div>
                 </div>
                 <div class="product-count">
                     <div class="product-count-title">
