--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -15,8 +15,8 @@
         rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" media="screen" href="/css/new.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="/css/base.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/new.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/base.css" />
 </head>
 
 <body>
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form-container">
-            <form method="post" action="/products" novalidate class="validated-form">
+            <form method="post" action="/products" novalidate class="validated-form" enctype="multipart/form-data">
                 <div class=" mb-3">
                     <input type="text" class="form-control" id="product-name" required name="product[name]"
                         placeholder="Product Name">
@@ -88,15 +88,15 @@
                 </div>
 
                 <div class="mb-3">
-                    <input type="text" class="form-control" id="product-img" required name="product[imageUrl]"
+                    <input type="file" class="form-control img-select" name="photo" id="photo" multiple="multiple"
                         placeholder="Product Image">
+
                     <div class="valid-feedback">
                         Looks Good!
                     </div>
                     <div class="invalid-feedback">
-                        Please enter a Valid Url.
+                        Please enter a Valid Image.
                     </div>
-
                 </div>
 
 
